<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.screen.actuator.detail.ActuatorDetailFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
>
    <LinearLayout
            android:id="@+id/llActuatorInfo"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Id:"
                    android:paddingRight="5dp"
            />
            <TextView
                    android:id="@+id/txtId"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Local id:"
                    android:paddingRight="5dp"
            />
            <TextView
                    android:id="@+id/txtLocalId"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/llType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Type:"
                    android:paddingRight="5dp"
            />
            <TextView
                    android:id="@+id/txtTypeId"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/llLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Label:"
                    android:paddingRight="5dp"
            />
            <TextView
                    android:id="@+id/txtLabel"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/llNorth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="North:"
                    android:paddingRight="5dp"
            />
            <TextView
                    android:id="@+id/txtNorth"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/llWest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="West:"
                    android:paddingRight="5dp"
            />
            <TextView
                    android:id="@+id/txtWest"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/llAutoRunDependSensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/llActuatorInfo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="5dp"
            android:background="@drawable/panel"
    >


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Auto run on:"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:layout_marginRight="5dp"
            />
            <TextView
                    android:id="@+id/txtRunOn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/sensor_value"
            />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/lnSensorTask"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:id="@+id/llSensorId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="Sensor Id:"
                        android:paddingRight="5dp"
                />
                <TextView
                        android:id="@+id/txtSensorId"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="Sensor label:"
                        android:paddingRight="5dp"
                />
                <TextView
                        android:id="@+id/txtSensorLabel"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="Sensor type:"
                        android:paddingRight="5dp"
                />
                <TextView
                        android:id="@+id/txtSensorType"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="Sensor unit:"
                        android:paddingRight="5dp"
                />
                <TextView
                        android:id="@+id/txtSensorUnit"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="Sensor value:"
                        android:paddingRight="5dp"
                />
                <TextView
                        android:id="@+id/txtSensorValue"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="Sensor target value:"
                        android:paddingRight="5dp"
                />
                <TextView
                        android:id="@+id/txtSensorTargetValueFrom"
                        android:textSize="22sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="000"
                        android:paddingRight="5dp"
                />
                <TextView
                        android:textSize="20sp"
                        android:text="to"
                        android:paddingRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/txtSensorTargetValueTo"
                        android:textSize="22sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="000"
                />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clActuatorControl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/llAutoRunDependSensor"
            app:layout_constraintBottom_toTopOf="@id/btnSave"
            android:padding="40dp"
    >
        <ImageView
                android:id="@+id/ivActuatorBg"
                android:src="@drawable/blue_neon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/ivActuatorBg"
                app:layout_constraintBottom_toBottomOf="@id/ivActuatorBg"
                app:layout_constraintLeft_toLeftOf="@id/ivActuatorBg"
                app:layout_constraintRight_toRightOf="@id/ivActuatorBg"
                android:orientation="horizontal"
        >
            <TextView
                    android:id="@+id/txtActuatorState"
                    android:text="ON"
                    android:textSize="100sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
            />
            <!--            <TextView-->
            <!--                    android:id="@+id/txtSensorUnit"-->
            <!--                    android:text="m/s"-->
            <!--                    android:textSize="40sp"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    app:layout_constraintTop_toTopOf="@id/ivSensorBg"-->
            <!--                    app:layout_constraintBottom_toBottomOf="@id/ivSensorBg"-->
            <!--                    app:layout_constraintLeft_toRightOf="@+id/txtSensorValue"-->
            <!--            />-->
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:id="@+id/btnRetry"
            android:visibility="gone"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/save"
    />
</androidx.constraintlayout.widget.ConstraintLayout>